# detex-ai

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fine-tune.ipynb  jina-fine-tuning.ipynb  main.py  pyproject.toml  requirements.txt  test.py
backend/: Dockerfile
backend/app/: api.py  config.py  main.py  ml.py  schemas.py  utils.py
backend/artifacts/jina-v5-finetuned/: best_clf_old.joblib
eval/: classifier_results.json
fine-ml/: fine_tune.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/components/: ChatPanel.tsx  FileUpload.tsx  Header.tsx  LogoMark.tsx  ResultCard.tsx  Sidebar.tsx  TextInput.tsx
frontend/src/types/: index.ts
ml/: README.md  __init__.py  _debug_grad.py  docker-compose.yml  download_data.py  embeddings.py  evaluate.py  fine_tune_data.py  predict.py  train.py  train_jina.py
ml/fine-tune/: Dockerfile  config.py  data_pipeline.py  fine_tune.py  inference.py  model.py  train.py
ml/pre-trained/: detect.py
ml/train/: Dockerfile  calibration_ensemble.py  config.py  data_train.py  evaluating.py  select_model.py  threshold_tuning.py  train_classifiers.py
models/: lightgbm.joblib  logistic_regression.joblib  xgboost.joblib
notebooks/: jina.ipynb  predictions_log.json  test-jina.ipynb
scripts/: download_model.sh
src/: download_data.py  embeddings.py
transformers/pretrained/: jina-transformers.ipynb  predictions_log.json
(+4 files in other folders)
